# Survival-Game

./: .gitignore  .gitmodules  CMakeLists.txt  Player Class  Projectile Class  Projectile Class (in progress)  Projectile Class(updated)  README.md  Won't rotate properly [BUG]  main.cpp
include/: Entity.hpp  Player.hpp  Projectile.hpp  StaticBody2D.hpp
src/: Player.cpp  Player.h  Projectile.cpp  Projectile.h  Resource.h  StaticBody2D.cpp  StaticBody2D.h  main.cpp
